@@ -12,7 +12,7 @@ has update_metrics => undef;
 
 sub register($self, $app, $config = {}) {
     if (my $update = $config->{update}) {
-        $self->$update($self->prometheus);
+        $self->update_metrics($update);
     }
     $config->{worker_label} //= 1;
     $config->{method_label} //= 1;
@@ -20,7 +20,7 @@ sub register($self, $app, $config = {}) {
     $self->_setup($config);
     if (my $setup = $config->{setup}) {
         $self->setup_metrics($setup);
-        $self->$setup($self->prometheus);
+        $app->$setup($self->prometheus);
     }
     my $prefix = $config->{route} // $app->routes->under('/');
     $self->route($prefix->get($config->{path} // '/metrics'));
@@ -124,7 +124,7 @@ Mojolicious::Plugin::PrometheusTiny - Export metrics using Prometheus::Tiny::Sha
     plugin 'PrometheusTiny';
 
     # Mojolicious::Lite, with custom response buckets (seconds)
-    plugin 'Prometheus' => { response_buckets => [qw/4 5 6/] };
+    plugin 'PrometheusTiny' => { response_buckets => [qw/4 5 6/] };
 
     # You can add your own route to do access control
     my $under = app->routes->under('/secret' =>sub {
@@ -134,7 +134,20 @@ Mojolicious::Plugin::PrometheusTiny - Export metrics using Prometheus::Tiny::Sha
       $c->render(text => 'Authentication required!', status => 401);
       return undef;
     });
-    plugin PrometheusTiny => {route => $under};
+    plugin PrometheusTiny => {
+        route  => $under,
+        # You may declare additional metrics with their own TYPE and HELP...
+        setup  => sub($app, $p) {
+            $p->declare('mojo_random',
+                type => 'gauge',
+                help => "Custom prometheus gauge"
+            );
+        },
+        # ...and set up a callback to update them right before exporting them
+        update => sub($c, $p) {
+            $p->set(mojo_random => rand(100));
+        },
+    };
 
 =head1 DESCRIPTION
 
@@ -149,9 +162,7 @@ There is no support for namespaces, subsystems or any other fancy Net::Prometheu
 
 =head1 CODE QUALITY NOTICE
 
-This is BETA code which is still subject to change.
-
-=head1 HELPERS
+This is BETA code =head1 HELPERS
 
 =head2 prometheus
 
@@ -205,7 +216,12 @@ Default: C<[ 1, 10, 100, 1_000, 10_000, 50_000, 100_000, 500_000, 1_000_000 ]>
 
 =item * duration_buckets
 
-Override buckets for request duration histogram.
+Override buckets for request duration         setup  => sub($app, $p) {
+            $p->declare('mojo_random',
+                type => 'gauge',
+                help => "Custom prometheus gauge"
+            );
+        }histogram.
 
 Default: C<[1..10, 20, 30, 60, 120, 300, 600, 1_200, 3_600, 6_000, 12_000]>
 
@@ -224,23 +240,14 @@ Default: true
 =item * setup
 
 Coderef to be executed during setup. Receives as arguments Application and Prometheus instances.
- It can be used to declare and/or initialize new metrics.
-
-        setup  => sub($app, $p) {
-            $p->declare('mojo_random',
-                type => 'gauge',
-                help => "Custom prometheus gauge"
-            );
-        }
+ Can be used to declare and/or initialize new metrics. Though it is trivial to use $app->prometheus
+ to declare metrics after plugin setup, code is more readable and easier to maintain
+ when actions are listed in their natural order.
 
 =item * update
 
 Coderef to be executed right before invoking exporter action configured in C<path>.
  Receives as arguments Controller and Prometheus instances.
-
-    update => sub($c, $p) {
-        $p->set(mojo_random => rand(100));
-    }
 
 =back
 
